--- a/themes/github-dev-page/theme.toml
+++ b/themes/github-dev-page/theme.toml
@@ -1,9 +1,9 @@
 name = "Github Developer Page"
 license = "MIT"
 licenselink = "https://github.com/tonofshell/github-dev-page/"
-description = "An easy to use landing page theme for github hosted project."
+description = "An blog-like single-page website for showing yourself off."
 homepage = "https://github.com/tonofshell/github-dev-page/"
-tags = ["company", "products", "landing page", "opensource"]
+tags = ["company", "job", "landing page", "advertising", "opensource"]
 features = ["github", "images" ]
 min_version= 0.1
 
